--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>简历</title>
+    <title>个人简历</title>
+    <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/fullpage.min.js"></script>
 </head>
 <body>
+<div id="fullpage">
+    <div class="section active">
+        欢迎来到我的简历页面（首页）
+    </div>
+    <div class="section">教育背景和熟悉技能，求职意向</div>
+    <div class="section" style="text-align: center;">
+        <div class="slide"> 工作经历项目1 </div>
+        <div class="slide"> 项目2 </div>
+        <div class="slide"> 项目3 </div>
+        <div class="slide"> 项目4 </div>
+    </div>
+</div>
 
+<script>
+    $(document).ready(function() {
+        $('#fullpage').fullpage({
+            sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#f90'],
+            continuousVertical: true,
+            controlArrowColor: '#fff000'
+        });
+    });
+</script>
 </body>
 </html>
